[tool.poetry]
name = "downtube"
version = "0.1.4"
description = "A simple yet powerful youtube downloader built in python"
authors = ["Arghya Sarkar <arghyasarkar.nolan@gmail.com>"]
license = "MIT"
readme="README.md"
homepage= "https://github.com/arghyagod-coder/downtube"
repository = "https://github.com/arghyagod-coder/downtube"
keywords = ["Downtube", "youtube-downloader", "download", "youtube"]

classifiers=[
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.6",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
        "Operating System :: OS Independent"
    ]


[tool.poetry.dependencies]
python = "^3.9"
click-help-colors = "^0.9.1"
click = "^8.0.1"
youtube-search = "^2.1.0"
tqdm = "^4.61.2"
pytube = "^10.9.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
dtube = "main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
